--- a/test-output/old/Navigator/methods-alphabetical.html
+++ b/test-output/old/Navigator/methods-alphabetical.html
@@ -1,50 +1,56 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Navigator</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:13:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.AddCommInfoViewlet(java.lang.String, int, org.testng.ITestContext)[pri:1, instance:ApodGUI.CommInfoViewlet@44a59da3]">AddCommInfoViewlet</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:16:55</td>   <td>196185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.AddCommunicationInfoToFavoriteViewlet(java.lang.String, org.testng.ITestContext)[pri:5, instance:ApodGUI.CommInfoViewlet@44a59da3]">AddCommunicationInfoToFavoriteViewlet</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:19:13</td>   <td>333601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.AddMultipleCommumicationInfosToFavoriteViewlet(java.lang.String, org.testng.ITestContext)[pri:8, instance:ApodGUI.CommInfoViewlet@44a59da3]">AddMultipleCommumicationInfosToFavoriteViewlet</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:18:05</td>   <td>265787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.CompareCommunicationInfos(java.lang.String, org.testng.ITestContext)[pri:6, instance:ApodGUI.CommInfoViewlet@44a59da3]">CompareCommunicationInfos</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:15:05</td>   <td>86031</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.CopyAsOfCommumicationInfo(java.lang.String, org.testng.ITestContext)[pri:3, instance:ApodGUI.CommInfoViewlet@44a59da3]">CopyAsOfCommumicationInfo</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:16:04</td>   <td>144777</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.DeleteCommunicationInfo(java.lang.String, org.testng.ITestContext)[pri:4, instance:ApodGUI.CommInfoViewlet@44a59da3]">DeleteCommunicationInfo</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:18:39</td>   <td>299877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.DifferencesOfCommunicationInfos(java.lang.String, org.testng.ITestContext)[pri:7, instance:ApodGUI.CommInfoViewlet@44a59da3]">DifferencesOfCommunicationInfos</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:12:05</td>   <td>-93908</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.Login(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">Login</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:22:21</td>   <td>522073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.Logout(java.lang.String)[pri:21, instance:ApodGUI.CommInfoViewlet@44a59da3]">Logout</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:14:29</td>   <td>49744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.Properties(org.testng.ITestContext)[pri:2, instance:ApodGUI.CommInfoViewlet@44a59da3]">Properties</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:19:58</td>   <td>378682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.ShowObjectAttributes(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:20, instance:ApodGUI.CommInfoViewlet@44a59da3]">ShowObjectAttributes</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:12:05</td>   <td>-93924</td> <td>&nbsp;</td><td title="&gt;&gt;CommInfoViewlet.beforeTest()[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:13:39</td>   <td>-316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:14:26</td>   <td>47475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:15:03</td>   <td>83896</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:16:02</td>   <td>142723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:16:53</td>   <td>194051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:18:03</td>   <td>263708</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:18:37</td>   <td>297812</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:19:11</td>   <td>331596</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:19:55</td>   <td>376457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:22:19</td>   <td>520042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:22:48</td>   <td>549155</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:30:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.AddSubscriptionViewlet(java.lang.String, int, org.testng.ITestContext)[pri:1, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">AddSubscriptionViewlet</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:43:08</td>   <td>746479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.AddToFavoriteForMultipleSubscription(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:18, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">AddToFavoriteForMultipleSubscription</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:38:43</td>   <td>481829</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.AddToFavoriteViewlet(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:10, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">AddToFavoriteViewlet</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:40:33</td>   <td>592200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.CheckDifferencesForSubscriptions(org.testng.ITestContext)[pri:12, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">CheckDifferencesForSubscriptions</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:40:00</td>   <td>558560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.CompareSubscription(org.testng.ITestContext)[pri:11, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">CompareSubscription</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:33:45</td>   <td>183758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.CopyAsFromCommands(java.lang.String, java.lang.String, java.lang.String, org.testng.ITestContext)[pri:3, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">CopyAsFromCommands</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:31:31</td>   <td>49671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.CreateSubscriptionFromOptions(java.lang.String, java.lang.String, java.lang.String, org.testng.ITestContext)[pri:2, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">CreateSubscriptionFromOptions</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:36:34</td>   <td>353117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.DeleteFromCommands(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:5, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">DeleteFromCommands</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:29:27</td>   <td>-73897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.Login(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">Login</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:43:08</td>   <td>746480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.Logout(java.lang.String)[pri:25, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">Logout</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:41:08</td>   <td>627066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.MultipleSubscriptionProperties(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:17, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">MultipleSubscriptionProperties</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:35:14</td>   <td>273082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.RenameFromCommands(java.lang.String, java.lang.String, java.lang.String, java.lang.String, org.testng.ITestContext)[pri:4, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">RenameFromCommands</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:37:31</td>   <td>410083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.SubscriptionEvents(java.lang.String, org.testng.ITestContext)[pri:9, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">SubscriptionEvents</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:29:27</td>   <td>-73920</td> <td>&nbsp;</td><td title="&gt;&gt;SubscriptionViewlet.beforeTest()[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:30:41</td>   <td>-116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:31:28</td>   <td>46809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:33:42</td>   <td>180923</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:35:12</td>   <td>270576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:36:32</td>   <td>350921</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:37:29</td>   <td>407872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:38:40</td>   <td>479016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:39:57</td>   <td>555470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:40:31</td>   <td>589385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:41:05</td>   <td>624273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:43:05</td>   <td>743694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:43:34</td>   <td>773033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
 </table>
