--- a/test-output/old/Navigator/methods.html
+++ b/test-output/old/Navigator/methods.html
@@ -1,50 +1,56 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Navigator</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:12:05</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;CommInfoViewlet.beforeTest()[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:12:05</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.Login(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">Login</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:13:39</td>   <td>93608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:13:39</td>   <td>93924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.AddCommInfoViewlet(java.lang.String, int, org.testng.ITestContext)[pri:1, instance:ApodGUI.CommInfoViewlet@44a59da3]">AddCommInfoViewlet</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:14:26</td>   <td>141399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:14:29</td>   <td>143668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.Properties(org.testng.ITestContext)[pri:2, instance:ApodGUI.CommInfoViewlet@44a59da3]">Properties</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:15:03</td>   <td>177820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:15:05</td>   <td>179955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.CopyAsOfCommumicationInfo(java.lang.String, org.testng.ITestContext)[pri:3, instance:ApodGUI.CommInfoViewlet@44a59da3]">CopyAsOfCommumicationInfo</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:16:02</td>   <td>236647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:16:04</td>   <td>238701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.DeleteCommunicationInfo(java.lang.String, org.testng.ITestContext)[pri:4, instance:ApodGUI.CommInfoViewlet@44a59da3]">DeleteCommunicationInfo</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:16:53</td>   <td>287975</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:16:55</td>   <td>290109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.AddCommunicationInfoToFavoriteViewlet(java.lang.String, org.testng.ITestContext)[pri:5, instance:ApodGUI.CommInfoViewlet@44a59da3]">AddCommunicationInfoToFavoriteViewlet</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:18:03</td>   <td>357632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:18:05</td>   <td>359711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.CompareCommunicationInfos(java.lang.String, org.testng.ITestContext)[pri:6, instance:ApodGUI.CommInfoViewlet@44a59da3]">CompareCommunicationInfos</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:18:37</td>   <td>391736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:18:39</td>   <td>393801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.DifferencesOfCommunicationInfos(java.lang.String, org.testng.ITestContext)[pri:7, instance:ApodGUI.CommInfoViewlet@44a59da3]">DifferencesOfCommunicationInfos</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:19:11</td>   <td>425520</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:19:13</td>   <td>427525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.AddMultipleCommumicationInfosToFavoriteViewlet(java.lang.String, org.testng.ITestContext)[pri:8, instance:ApodGUI.CommInfoViewlet@44a59da3]">AddMultipleCommumicationInfosToFavoriteViewlet</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:19:55</td>   <td>470381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:19:58</td>   <td>472606</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.ShowObjectAttributes(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:20, instance:ApodGUI.CommInfoViewlet@44a59da3]">ShowObjectAttributes</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:22:19</td>   <td>613966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:22:21</td>   <td>615997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommInfoViewlet.Logout(java.lang.String)[pri:21, instance:ApodGUI.CommInfoViewlet@44a59da3]">Logout</td> 
-  <td>main@2024415090</td>   <td></td> </tr>
-<tr bgcolor="f7ac90">  <td>22/08/09 17:22:48</td>   <td>643079</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CommInfoViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.CommInfoViewlet@44a59da3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2024415090</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:29:27</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SubscriptionViewlet.beforeTest()[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:29:27</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.Login(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">Login</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:30:41</td>   <td>73804</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:30:41</td>   <td>73920</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.AddSubscriptionViewlet(java.lang.String, int, org.testng.ITestContext)[pri:1, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">AddSubscriptionViewlet</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:31:28</td>   <td>120729</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:31:31</td>   <td>123591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.CreateSubscriptionFromOptions(java.lang.String, java.lang.String, java.lang.String, org.testng.ITestContext)[pri:2, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">CreateSubscriptionFromOptions</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:33:42</td>   <td>254843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:33:45</td>   <td>257678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.CopyAsFromCommands(java.lang.String, java.lang.String, java.lang.String, org.testng.ITestContext)[pri:3, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">CopyAsFromCommands</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:35:12</td>   <td>344496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:35:14</td>   <td>347002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.RenameFromCommands(java.lang.String, java.lang.String, java.lang.String, java.lang.String, org.testng.ITestContext)[pri:4, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">RenameFromCommands</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:36:32</td>   <td>424841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:36:34</td>   <td>427037</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.DeleteFromCommands(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:5, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">DeleteFromCommands</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:37:29</td>   <td>481792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:37:31</td>   <td>484003</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.SubscriptionEvents(java.lang.String, org.testng.ITestContext)[pri:9, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">SubscriptionEvents</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:38:40</td>   <td>552936</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:38:43</td>   <td>555749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.AddToFavoriteViewlet(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:10, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">AddToFavoriteViewlet</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:39:57</td>   <td>629390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:40:00</td>   <td>632480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.CompareSubscription(org.testng.ITestContext)[pri:11, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">CompareSubscription</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:40:31</td>   <td>663305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:40:33</td>   <td>666120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.CheckDifferencesForSubscriptions(org.testng.ITestContext)[pri:12, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">CheckDifferencesForSubscriptions</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:41:05</td>   <td>698193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:41:08</td>   <td>700986</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.MultipleSubscriptionProperties(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:17, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">MultipleSubscriptionProperties</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:43:05</td>   <td>817614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:43:08</td>   <td>820399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.AddToFavoriteForMultipleSubscription(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:18, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">AddToFavoriteForMultipleSubscription</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:43:08</td>   <td>820400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubscriptionViewlet.Logout(java.lang.String)[pri:25, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">Logout</td> 
+  <td>main@754177595</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>22/12/27 15:43:34</td>   <td>846953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubscriptionViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:ApodGUI.SubscriptionViewlet@4b0d79fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@754177595</td>   <td></td> </tr>
 </table>
