--- a/test-output/old/Navigator/reporter-output.html
+++ b/test-output/old/Navigator/reporter-output.html
@@ -1,23 +1,27 @@
 <h2>Reporter output</h2><table><tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/Login.png" alt="""/" /></td></tr>
+<tr><td><img src=" E:\Automation\Navigator/Screenshots/ScreenshotsSuccess/Login.png" alt="""/" /></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/AddCommInfoViewlet.png" alt="""/" /></td></tr>
+<tr><td><img src=" E:\Automation\Navigator/Screenshots/ScreenshotsSuccess/AddSubscriptionViewlet.png" alt="""/" /></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/Properties.png" alt="""/" /></td></tr>
+<tr><td><img src=" E:\Automation\Navigator/Screenshots/ScreenshotsSuccess/CreateSubscriptionFromOptions.png" alt="""/" /></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/CopyAsOfCommumicationInfo.png" alt="""/" /></td></tr>
-<tr><td>Screenshots/ScreenshotsFailure/DeleteCommunicationInfo.png</td></tr>
-<tr><td><br/>Failed to execute method: DeleteCommunicationInfo<br/></td></tr>
+<tr><td><img src=" E:\Automation\Navigator/Screenshots/ScreenshotsSuccess/CopyAsFromCommands.png" alt="""/" /></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsFailure/DeleteCommunicationInfo.png" alt="""/" /></td></tr>
+<tr><td><img src=" E:\Automation\Navigator/Screenshots/ScreenshotsSuccess/RenameFromCommands.png" alt="""/" /></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/AddCommunicationInfoToFavoriteViewlet.png" alt="""/" /></td></tr>
+<tr><td><img src=" E:\Automation\Navigator/Screenshots/ScreenshotsSuccess/DeleteFromCommands.png" alt="""/" /></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/CompareCommunicationInfos.png" alt="""/" /></td></tr>
+<tr><td><img src=" E:\Automation\Navigator/Screenshots/ScreenshotsSuccess/SubscriptionEvents.png" alt="""/" /></td></tr>
+<tr><td>Screenshots/ScreenshotsFailure/AddToFavoriteViewlet.png</td></tr>
+<tr><td><br/>Failed to execute method: AddToFavoriteViewlet<br/></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/DifferencesOfCommunicationInfos.png" alt="""/" /></td></tr>
+<tr><td><img src=" E:\Automation\Navigator/Screenshots/ScreenshotsFailure/AddToFavoriteViewlet.png" alt="""/" /></td></tr>
+<tr><td>Screenshots/ScreenshotsFailure/CompareSubscription.png</td></tr>
+<tr><td><br/>Failed to execute method: CompareSubscription<br/></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/AddMultipleCommumicationInfosToFavoriteViewlet.png" alt="""/" /></td></tr>
+<tr><td><img src=" E:\Automation\Navigator/Screenshots/ScreenshotsFailure/CompareSubscription.png" alt="""/" /></td></tr>
 <tr><td><br/></td></tr>
-<tr><td><img src=" F:\Automation\Navigator/Screenshots/ScreenshotsSuccess/ShowObjectAttributes.png" alt="""/" /></td></tr>
+<tr><td><img src=" E:\Automation\Navigator/Screenshots/ScreenshotsSuccess/CheckDifferencesForSubscriptions.png" alt="""/" /></td></tr>
+<tr><td><br/></td></tr>
+<tr><td><img src=" E:\Automation\Navigator/Screenshots/ScreenshotsSuccess/MultipleSubscriptionProperties.png" alt="""/" /></td></tr>
 </table>
