--- a/test-output/old/Navigator/classes.html
+++ b/test-output/old/Navigator/classes.html
@@ -4,22 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>ApodGUI.CommInfoViewlet</td>
+<td>ApodGUI.SubscriptionViewlet</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ShowObjectAttributes</td>
+<td>CopyAsFromCommandsForMultipleSubscriptions</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>CopyAsOfCommumicationInfo</td>
+<td>CheckDifferencesForSubscriptions</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Properties</td>
+<td>RenameFromCommands</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -27,7 +27,47 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>AddMultipleCommumicationInfosToFavoriteViewlet</td>
+<td>MQSCSnapshot</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>SubscriptionEvents</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>AddSubscriptionViewlet</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>SubscriptionProperties</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>AddToFavoriteForMultipleSubscription</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>CreateSubscriptionFromPlusIcon</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>ShowSubscriptionStatus</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>DeleteFromCommandsForMultipleSubscriptions</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>CompareSubscription</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>AddToFavoriteViewlet</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>DeleteFromCommands</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -35,27 +75,27 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>DeleteCommunicationInfo</td>
+<td>RenameFromCommandsForMultipleSubscriptions</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>AddCommunicationInfoToFavoriteViewlet</td>
+<td>CopyAsFromCommands</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>DifferencesOfCommunicationInfos</td>
+<td>ShowObjectAttributesForSubscription</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>AddCommunicationInfoUsingPlusIcon</td>
+<td>CreateSubscriptionFromOptions</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>AddCommInfoViewlet</td>
+<td>MultipleSubscriptionProperties</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>CompareCommunicationInfos</td>
+<td>SaveSubscriptionSnapshot</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
